<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_back"
    android:layout_margin="12dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/itemtv"
                android:padding="12dp"
                android:text="@string/demo"
                android:textColor="@color/black"
                android:layout_marginStart="16dp"
                android:textStyle="bold"
                android:textSize="18sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/itemDesc"
                android:text="@string/demo_text"
                android:maxLines="2"
                android:layout_marginStart="16dp"
                android:paddingStart="12dp"
                android:paddingEnd ="12dp"
                android:paddingBottom="12dp"
                android:textSize="16sp"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shareRepo"
            android:contentDescription="@string/share_button"
            android:src="@drawable/baseline_share_24"
            android:layout_gravity="end|center_vertical"
            android:padding="12dp"
            android:layout_marginEnd="12dp"

            />

    </LinearLayout>



</LinearLayout>